@@ -1,19 +1,24 @@
 package com.limechain.runtime.hostapi;
 
+import com.limechain.rpc.server.AppBean;
 import com.limechain.runtime.hostapi.dto.RuntimePointerSize;
+import com.limechain.storage.crypto.KeyStore;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
@@ -62,19 +67,23 @@ class MiscellaneousHostFunctionsTest {
     }
 
     @Test
-    @Disabled("needs working allocator api")
+    @Disabled("Does not work in github actions")
     void runtimeVersionV1() throws IOException {
-        byte[] wasmRuntime = Files.readAllBytes(Path.of("./src/test/resources/runtime.wasm"));
-        byte[] runtimeData = Files.readAllBytes(Path.of("./src/test/resources/runtime.data"));
+        byte[] wasmRuntime = Files.readAllBytes(Paths.get("src","test","resources","runtime.wasm"));
+        byte[] runtimeData = Files.readAllBytes(Paths.get("src","test","resources","runtime.data"));
         when(hostApi.getDataFromMemory(valuePointer)).thenReturn(wasmRuntime);
         when(hostApi.writeDataToMemory(runtimeData)).thenReturn(targetPointer);
 
-        RuntimePointerSize result = miscellaneousHostFunctions.runtimeVersionV1(valuePointer);
+        try(MockedStatic<AppBean> appBeanMockedStatic = mockStatic(AppBean.class)){
+            appBeanMockedStatic.when(() -> AppBean.getBean(KeyStore.class)).thenReturn(mock(KeyStore.class));
 
-        assertEquals(targetPointer, result);
-        verify(hostApi).getDataFromMemory(valuePointer);
-        verify(hostApi).writeDataToMemory(runtimeData);
-        verifyNoMoreInteractions(hostApi);
+            RuntimePointerSize result = miscellaneousHostFunctions.runtimeVersionV1(valuePointer);
+
+            assertEquals(targetPointer, result);
+            verify(hostApi).getDataFromMemory(valuePointer);
+            verify(hostApi).writeDataToMemory(runtimeData);
+            verifyNoMoreInteractions(hostApi);
+        }
     }
 
     @Test
